# SkillScript

./: .gitignore  AUTHORS  Makefile.am  Makefile.def  Makefile.in  Makefile.tpl  NEWS  README  README.md  Skill Script.xml  config.h.in  configure  configure.ac  move-if-change
config/: acx.m4  sks.xml
include/: analyze.h  file.h  offen.h  script.h  style.h
libsks/: Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  fragment.am
libsks/include/: attr.h  skill.h  version.h
libsks/src/: Makefile.am  Makefile.in  analyze.cc  attr.cc  style.cc  version.cc
libsks/testsuite/: Makefile.in  sks-attr.cpp  test0.sks
sks/: Makefile.am  acinclude.m4  configure  configure.ac
sks/include/: main.h  message.h
sks/src/: Makefile.am  Makefile.in  main.cc  main.cpp  message.cc
src/: Makefile  attr.cpp  file.cpp  main.cpp  offen.cpp  script.cpp  skill.cpp  sks.cpp
testsuite/: Makefile  papapa.sks  sks-attr.cpp  test.sks  test1.sks
