#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([skill-script], [1.1.0], [BeiChen1949@gmail.com])
AC_CONFIG_AUX_DIR([..])
AC_CONFIG_MACRO_DIRS([..])
AM_INIT_AUTOMAKE([1.15.1 no-define foreign no-dependencies no-dist -Wall -Wno-portability -Wno-override])
AC_CONFIG_SRCDIR([src/main.cc])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

LT_INIT

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
